--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <input type="text" name="surname" id="surname" placeholder="Enter your surname">
         <input type="number" name="age" id="age" placeholder="Enter your age">
         <input type="submit" value="SAVE">
+        <button type="reset">Reset</button>
+        <button id="showAll">Show All</button>
     </form>
+
+    <div id="output"></div>
 
 
     <script src="scripts.js"></script>
